--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,6 @@ matplotlib
 seaborn
 pandas
 numpy
-scikit-learn
-imbalanced-learn
+scikit-learn>=1.0.2
+imbalanced-learn>=0.10.1
 joblib
-imbalanced-learn
-
